@@ -1,3 +1,9 @@
+2001-03-19  Jonathan Gapen  <jagapen@home.com>
+
+	* Headers/gnustep/gui/NSPrinter.h: Prefix instance vars w/underscore.
+	* Source/NSPrinter.m: Remove (the now) extraneous cString usage, and
+	prefix instance vars with underscore.
+
 Sun Mar 18 15:58:43 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Tools/GNUmakefile (GNUSTEP_MAKE_SERVICES): Define it to tell
